# sqlite-server-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/python/: sqlite.py
examples/rust/: client.rs
src/: config.rs  connection.rs  handler.rs  main.rs  server.rs
tests/: protocol.rs
